# PropContext

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  IDEA.md  IMPLEMENTATION_PLAN.md  INDEX_README.md  LANDING_PAGE_BRIEF.md  PLAN.md  PRD.md  PROBLEM_STATEMENT.md  README.md  docker-compose.yml  gemini.md  optimisation-checklist.md  pyproject.toml  simulation.md  template_index.md
.claude/: settings.json
01/cf08645ead/: metadata.json
11/c666af151b/: metadata.json
17/af06a87d2b/: metadata.json
1f/223484156e/: metadata.json
26/c16b82b2fd/: metadata.json
29/cebc38bccd/: metadata.json
36/626099272e/: metadata.json
3e/dfd37c64c7/: metadata.json
41/65b89bd84a/: metadata.json
42/d84e6006ec/: metadata.json
44/a26a2c65ad/: metadata.json
45/b2c3d9cf1b/: metadata.json
4a/3ad2c050c2/: metadata.json
4c/2df49030a6/: metadata.json
4e/3fa538819f/: metadata.json
4f/77d4f414fd/: metadata.json
4f/7ef4a13f8b/: metadata.json
53/f26655d0f8/: metadata.json
56/5630af57fb/: metadata.json
63/0a582d2590/: metadata.json
67/066d2cdd14/: metadata.json
74/e31b085987/: metadata.json
76/2259828dfe/: metadata.json
77/d47fd00136/: metadata.json
81/1125127967/: metadata.json
83/40b33041f5/: metadata.json
8d/ef650fa3b4/: metadata.json
92/9e0ab98114/: metadata.json
94/fa04b93ad5/: metadata.json
96/c3b1c0f037/: metadata.json
9b/30d45ff096/: metadata.json
a2/59414789c7/: metadata.json
a2/6d9975131f/: metadata.json
a9/faf55ea1f3/: metadata.json
app/: main.py
app/core/: config.py  logging.py  middleware.py
hackathon/: DATA_SUMMARY.md
schema/: CLAUDE.md  EXTRACTION_PROMPTS.md  HERMES_LOOP.md  WIKI_SCHEMA.md
scripts/: _anthropic_smoke.py
tests/: conftest.py  test_buildings.py  test_config.py  test_enrich.py  test_health.py  test_mcp.py  test_middleware.py  test_pages_filter.py  test_properties.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+567 files in other folders)
